@@ -1,4 +1,5 @@
 ﻿using Abp.Application.Services.Dto;
+using Ermes.Enums;
 using System;
 using System.Collections.Generic;
 using System.Text;
@@ -11,5 +12,6 @@ namespace Ermes.Activities.Dto
         public string Name { get; set; }
         public string ShortName { get; set; }
         public int? ParentId { get; set; }
+        public HazardType Hazard { get; set; }
     }
 }
