@@ -1,6 +1,7 @@
 Ver.
 ---------------------------
 - Feature - Update preferred languages API added and UpdateProfile API updated (#20)
+- Feature - Added Hazard property to Activity (migration added) (#19)
 
 Ver. 1.5.2 - 2021-03-26
 ---------------------------
